feat: Add empty library screen

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
     </section>
     <section id="gallery">
       <div class="reading-list">Your reading list</div>
+      
+      <div class="empty-list">
+        <div class="face">\(o_o)/</div>
+        <div class="ohnoes">OH NOES! <br> Empty Library!</div>
+        <div class="choices">
+          <div class="choice">Add A New Book</div>
+          <div class="choice">Online Book Search</div>
+          <div class="choice">Book Suggestions</div>
+          <div class="choice">Generate Library</div>
+        </div>
+
+      </div>
+    </div>
 
     </section>
     <footer>
