feat: Add basic card grid layout w/ styles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section id="gallery">
       <div class="reading-list">Your reading list</div>
       
-      <div class="empty-list">
+      <div class="empty-list hide">
         <div class="face">\(o_o)/</div>
         <div class="ohnoes">OH NOES! <br> Empty Library!</div>
         <div class="choices">
@@ -53,6 +53,108 @@
           <div class="choice">Generate Library</div>
         </div>
 
+      </div>
+
+      <div class="card" data-lib-index="0">
+        <!-- <span class="ribbon unread">Unread</span>
+        <div class="card-header cutCorner"></div> -->
+        <div class="card-container">
+          <div class="book-cover"><span class="material-symbols-outlined img">local_library</span></div>
+          <div class="card-contents">
+            <div class="book-title">Title Yeah I need One!</div>
+            <div class="book-author">Author Right?</div>
+            <div class="book-pages">Pages Some</div>
+          </div>
+          <div class="card-actions">
+            <div class="trash"><span class="material-symbols-outlined md">delete</span></div>
+            <div class="status"><span class="material-symbols-outlined md">visibility</span></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card" data-lib-index="1">
+        <!-- <span class="ribbon unread">Unread</span>
+        <div class="card-header cutCorner"></div> -->
+        <div class="card-container">
+          <div class="book-cover"><span class="material-symbols-outlined img">local_library</span></div>
+          <div class="card-contents">
+            <div class="book-title">Title Yeah I need One!</div>
+            <div class="book-author">Author Right?</div>
+            <div class="book-pages">Pages Some</div>
+          </div>
+          <div class="card-actions">
+            <div class="trash"><span class="material-symbols-outlined md">delete</span></div>
+            <div class="status"><span class="material-symbols-outlined md">visibility</span></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card" data-lib-index="2">
+        <!-- <span class="ribbon unread">Unread</span>
+        <div class="card-header cutCorner"></div> -->
+        <div class="card-container">
+          <div class="book-cover"><span class="material-symbols-outlined img">local_library</span></div>
+          <div class="card-contents">
+            <div class="book-title">Title Yeah I need One!</div>
+            <div class="book-author">Author Right?</div>
+            <div class="book-pages">Pages Some</div>
+          </div>
+          <div class="card-actions">
+            <div class="trash"><span class="material-symbols-outlined md">delete</span></div>
+            <div class="status"><span class="material-symbols-outlined md">visibility</span></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card" data-lib-index="3">
+        <!-- <span class="ribbon unread">Unread</span>
+        <div class="card-header cutCorner"></div> -->
+        <div class="card-container">
+          <div class="book-cover"><span class="material-symbols-outlined img">local_library</span></div>
+          <div class="card-contents">
+            <div class="book-title">Title Yeah I need One!</div>
+            <div class="book-author">Author Right?</div>
+            <div class="book-pages">Pages Some</div>
+          </div>
+          <div class="card-actions">
+            <div class="trash"><span class="material-symbols-outlined md">delete</span></div>
+            <div class="status"><span class="material-symbols-outlined md">visibility</span></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card" data-lib-index="4">
+        <!-- <span class="ribbon unread">Unread</span>
+        <div class="card-header cutCorner"></div> -->
+        <div class="card-container">
+          <div class="book-cover"><span class="material-symbols-outlined img">local_library</span></div>
+          <div class="card-contents">
+            <div class="book-title">Title Yeah I need One!</div>
+            <div class="book-author">Author Right?</div>
+            <div class="book-pages">Pages Some</div>
+          </div>
+          <div class="card-actions">
+            <div class="trash"><span class="material-symbols-outlined md">delete</span></div>
+            <div class="status"><span class="material-symbols-outlined md">visibility</span></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card" data-lib-index="5">
+        <!-- <span class="ribbon unread">Unread</span>
+        <div class="card-header cutCorner"></div> -->
+        <div class="card-container">
+          <div class="book-cover"><span class="material-symbols-outlined img">local_library</span></div>
+          <div class="card-contents">
+            <div class="book-title">Title Yeah I need One!</div>
+            <div class="book-author">Author Right?</div>
+            <div class="book-pages">Pages Some</div>
+          </div>
+          <div class="card-actions">
+            <div class="trash"><span class="material-symbols-outlined md">delete</span></div>
+            <div class="status"><span class="material-symbols-outlined md">visibility</span></div>
+          </div>
+        </div>
       </div>
     
 
