feat: Add JavaScript code, generates library, etc
Added Book constructor.
Added Library array.
Added array of classic books.
Added random generator function to create random collections
Added function to generate a random library of classics.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
   <script src="//code.iconify.design/1/1.0.6/iconify.min.js"></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <main>
@@ -20,10 +21,10 @@
     <section id="menu">
       <div class="section-title"><span class="material-icons lg">menu</span>Menu</div>
       <div class="menu-container">
-        <div class="add-book"><span class="material-symbols-outlined">library_add</span>Add Book Manually</div>
-        <div class="find-book"><span class="material-symbols-outlined">travel_explore</span>Find Book Online</div>
-        <div class="suggest"><span class="material-symbols-outlined">comment_bank</span>Get Book Suggestions</div>
-        <div class="generate"><span class="material-symbols-outlined">newsstand</span>Auto Generate a Library</div>
+        <div class="add-book menu-item"><span class="material-symbols-outlined">library_add</span>Add Book Manually</div>
+        <div class="find-book menu-item"><span class="material-symbols-outlined">travel_explore</span>Find Book Online</div>
+        <div class="suggest menu-item"><span class="material-symbols-outlined">comment_bank</span>Get Book Suggestions</div>
+        <div class="generate menu-item"><span class="material-symbols-outlined">newsstand</span>Auto Generate a Library</div>
       </div>
     </section>
 
