feat: Add Book Suggestions via NYTimes API
Add functions to fetch books from NYTimes Books API
Add functions to extract and format results from raw data
Add functions to populate a modal with suggestions
Add function to add any of the books to the library
Add function to query Open Library API and find pages for
books suggested by NYTimes since it doesn't include page count
Add a modal to display a random list of suggestions.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
       </div>
     </dialog>
 
+    <dialog id="suggestions">
+      <div class="dialog">
+        <div class="dialog-header">
+          <div class="close"><span class="material-symbols-outlined">close</span></div>
+        </div>
+        <div class="dialog-content">
+          
+        </div>
+      </div>
+    </dialog>
+
     <footer>
       <div class="footer">
         <div class="line1"> Made with:
