feat: Add Online Book Search and Add feature

--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
           <div class="close"><span class="material-symbols-outlined">close</span></div>
         </div>
         <div class="dialog-content">
-
         </div>
       </div>
     </dialog>
@@ -116,7 +115,7 @@
           <div class="dialog-content" style="">
             
             <div class="dialog-card">
-              <div class="heading">Internet Book Search</div>
+              <div class="heading">Book Search</div>
               <form id="search-book">
                 <div class="form-group">
                   <label for="query">Title or ISBN</label>
@@ -130,198 +129,7 @@
           </div>
 
           <div class="dialog-results" style="display: none;">
-            <div class="heading">Internet Book Search Results</div>
-
-            <div class="results-card odd">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="0">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="results-card even">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="1">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="results-card odd">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="2">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="results-card even">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="3">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="results-card odd">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="4">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-
-            </div>
-            <div class="results-card even">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add" >
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="5">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="results-card odd">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="6">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="results-card even">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="7">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="results-card odd">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">add</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="8">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="results-card even">
-              <div class="results-cover">
-                <img src="https://covers.openlibrary.org/b/olid/OL28172760M-S.jpg" alt="">
-                <div class="results-add">
-                  <span class="material-symbols-outlined add-book">check</span>
-                </div>
-              </div>
-              <div class="results-details" data-index="9">
-                <div class="results-title">1984</div>
-                <div class="results-author">George Orwell</div>
-                <div class="results-pages">384</div>
-                <div class="results-status">
-                  <p>Have you read it?</p> 
-                  <a href="" class="yes">Yes</a>
-                  <a href="" class="no">No</a>
-                </div>
-              </div>
-            </div>
-
+            <div class="heading">Search Results</div>
           </div>
         </div>
       </div> 
@@ -355,7 +163,6 @@
                 <p>Empty your library and try again, or add books using other methods.</p>
               </div>
             </div>
-
           </div>
 
         </div>
