fix: Change conditions for Auto Generate Library

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
             </div>
 
             <div id="gen2" class="dialog-card hide">
-              <div class="heading">Your library is not empty!</div>
+              <div class="heading">Previouly Generated Library Found!</div>
               <div class="message">
-                <p>This generator is meant to be used only when your libray is empty.</p>
+                <p>This generator is meant to be used only once.</p>
                 <br>
-                <p>Empty your library and try again, or add books using other methods.</p>
+                <p>Empty your library and try again.</p>
               </div>
             </div>
           </div>
